tests/compile_fail/no_attribute.rs
use protowirers::*;

#[derive(Proto)]
struct Sample {
    s: u32,
}

fn main() {}
