tests/compile_fail/no_attribute.stderr
error: #[def(...)] attribute requires.
 --> $DIR/no_attribute.rs:5:5
  |
5 |     s: u32,
  |     ^
